# AEGIS-X

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  experiments-v2.yml  experiments.yml  v3-ablation.yml
aegis/: __init__.py
aegis/common/: metrics.py  models.py  sequence.py  storage.py
aegis/correlation/: __init__.py  attack_graph.py  attack_mapping.py  engine.py  enrichment.py  incident_store.py  incidents.py  pipeline.py  risk.py  topology.py
aegis/detection/: alerts.py  features.py  (+5 more)
benchmarks/: baseline-v2-trigger.txt
docs/: PHASE4_ARCHITECTURE.md  phase3-architecture.md
scripts/: run_detection_experiments.py  run_v3_ablation.py
tests/: test_alert_lifecycle.py  test_api.py  test_approval_gates.py  test_attack_graph.py  test_attack_mapping.py  test_correlation_engine.py  test_decision_ledger.py  test_decision_support.py  test_detection.py  test_evaluation.py  test_evidence_acquisition.py  test_evidence_bundle.py  test_evidence_citations.py  test_experiments.py  test_faithfulness.py  test_features.py  test_generative_narrative.py  test_hypothesis_engine.py  test_hypothesis_reevaluation.py  test_incident_clustering.py  test_incident_store.py  test_investigation_planning.py  test_investigation_policy.py  test_investigation_timeline.py  test_metrics.py  test_model_cache.py  test_phase3_topology.py  test_risk_prioritization.py  test_safe_tools.py  test_scenarios.py  test_scoring.py  test_sequence.py  test_slow_burn.py  test_storage.py  test_telemetry.py  test_temporal_detection.py  test_uncertainty_model.py
(+35 files in other folders)
