[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-x"
version = "0.1.0"
description = "Autonomous cyber-physical security research platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "paho-mqtt>=2.1",
  "numpy>=2.1",
  "scikit-learn>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.9", "mypy>=1.14", "httpx>=0.28"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
